--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">ASMR</string>
-    <string name="title_home">Home</string>
-    <string name="title_keyboard_voice">Record</string>
-    <string name="title_alarm">Alarm</string>
+    <string name="title_home">Sound</string>
+    <string name="title_keyboard_voice">Play</string>
+    <string name="title_alarm">List</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
