--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">ASMR</string>
     <string name="title_home">Sound</string>
     <string name="title_keyboard_voice">Play</string>
-    <string name="title_alarm">List</string>
+    <string name="title_alarm">Link</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
